--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-matplotlib==3.7.1
-numpy==1.24.3
-pandas==2.0.2
-scipy==1.10.1
-tabulate==0.9.0
+black
+ipython
+matplotlib
+numpy
+pandas
+pytest
+scipy
+tabulate
